--- a/Source/Common/Projects/NTDirectX/Camera.cls
+++ b/Source/Common/Projects/NTDirectX/Camera.cls
@@ -43,12 +43,14 @@ Public Function ToString() As String
             ToString = ToString & Include.URLEncode("Camera.Player.Origin.ToString = """ & pPlayer.Origin.ToString & """") & vbCrLf
             ToString = ToString & Include.URLEncode("Camera.Player.Rotate.ToString = """ & pPlayer.Rotate.ToString & """") & vbCrLf
         ElseIf Not Camera.Planet Is Nothing Then
+            If Not Camera.Planet.Molecules Is Nothing Then
             If Camera.Planet.Molecules.Exists(pPlayer.Key) Then
                 ToString = ToString & Include.URLEncode("Set Camera.Player = Camera.Planet.Molecules(""" & pPlayer.Key & """)") & vbCrLf
            
                 ToString = ToString & Include.URLEncode("Camera.Player.Origin.ToString = """ & pPlayer.Origin.ToString & """") & vbCrLf
                 ToString = ToString & Include.URLEncode("Camera.Player.Rotate.ToString = """ & pPlayer.Rotate.ToString & """") & vbCrLf
                 
+            End If
             End If
         End If
         
